--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <dropwizard.version>4.0.7</dropwizard.version>
-        <mainClass>org.asr.experiments.trueApplication</mainClass>
+        <mainClass>org.asr.experiments.TrueApplication</mainClass>
     </properties>
 
     <dependencyManagement>
