Added dependency for Authentication
Signed-off-by: Arvind Singh Rawat <arrawat@deloitte.com>

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-client</artifactId>
         </dependency>
+        <!--  For Authentication      -->
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-auth</artifactId>
+        </dependency>
         <!-- For Dependency injection       -->
         <dependency>
             <groupId>ru.vyarus</groupId>
